[gd_scene load_steps=5 format=3 uid="uid://x8cta2ypynum"]

[ext_resource type="Texture2D" uid="uid://dpyam1ct8gv64" path="res://assets/frames/hidden_frame_blank.png" id="1_3ehh2"]
[ext_resource type="Script" path="res://scenes/ui/buttons/memory_tile_button.gd" id="2_2qy1b"]
[ext_resource type="Texture2D" uid="uid://c4d6uomumtu6a" path="res://assets/frames/blue_frame.png" id="2_6llaw"]
[ext_resource type="Texture2D" uid="uid://iupm3lumr4f6" path="res://assets/glitch/alienBeige_square.png" id="3_1gait"]

[node name="MemoryTileButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 42)
texture_normal = ExtResource("1_3ehh2")
script = ExtResource("2_2qy1b")

[node name="TileFrame" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -42.0
offset_right = 42.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 42)
texture = ExtResource("2_6llaw")

[node name="TileImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1gait")

[connection signal="pressed" from="." to="." method="_on_pressed"]
